--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -1,4 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>天灾人祸</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/18/n11664681.md#1" target="_blank">央企排黑液 腾格里沙漠现12万平米污染带</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/18/n11664681.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111259377925-150x120.jpg" align ="left"></a>宁夏腾格里沙漠再现污染，总面积约12万平方米，系造纸央企前身排出的造纸黑液，地面犹如龟甲，令人触目惊心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 9:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank">【新闻看点】鼠疫涉陆三省？最可怕不是疫情</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/18/n11664341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/plague4-1112-600x400-1-150x120.jpg" align ="left"></a>网络传出，北京多家医院都收治了疑似鼠疫患者。医院要求病人报告最近是否去过青海、甘肃和内蒙古地区。据此外界推测，这三个省区可能都已经发生了鼠疫。但是中共一直语焉不详，有专家推测，大陆的鼠疫可能比想像中还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 7:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank">内蒙新增鼠疫病例 疫情全貌遭严密封锁</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/17/n11661503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/image-5-150x120.jpg" align ="left"></a>蒙古卫健委周日（17日）凌晨发布消息称，当地卫生部门在一天前确诊一位在乌兰察布市化德县医院就诊的55岁患者，受到腺鼠疫情感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 1:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank">内蒙又1人被确诊鼠疫 28人曾与之密切接触</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/17/n11661086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/08/908051910581497-150x120.jpg" align ="left"></a>11月17日，中共官方披露，16日，内蒙古自治区锡林郭勒盟镶黄旗巴音塔拉苏木采石场一男子，在乌兰察布市化德县医院就诊期间，被确诊为患上腺鼠疫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:31 PM							</td></tr>
@@ -23,7 +24,7 @@
 吉林省白城市通榆县向海乡富国村位于向海保护区内，周边的自然林是亚洲最大的蒙古黄榆林，百年老榆树就有一千多棵，小树不计其数。蒙古黄榆是国家二级保护树种。
 
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月26日 12:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/25/n11611452.md#1" target="_blank">连续干旱3个月 江西省至少440万人受灾</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/25/n11611452.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1t-g-150x120.jpg" align ="left"></a>自7月以来，江西省多地出现干旱，部分地区旱情严重。据官方统计，至今旱情已导致至少440万人受灾，逾42.4万公顷农作物受灾，全省农业损失占比95%以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 6:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11665020.md#1" target="_blank">中国山西煤矿瓦斯爆炸 造成15死9伤</a><br></h3>中国山西省平遥县昨日（18日）下午发生一起煤矿瓦斯爆炸事故，造成15人遇难，9人受伤，搜救已在今日凌晨2时结束，事故原因正在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/16/n11659848.md#1" target="_blank">浙大学生与男友吵架后遗体在河道内被发现</a><br></h3>11月11日，大陆新浪微博上传出浙江平湖市的“一个单身妈妈的血泪控诉”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/15/n11657369.md#1" target="_blank">安徽蚌埠5间门面房着火 致5死3伤</a><br></h3>11月15日，中共安徽省应急管理厅网站消息，今天（15日）6时57分许，安徽蚌埠市龙子湖区淮河路车站新村853栋门面房发生火灾，导致5死，1重伤，2人轻伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 1:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/14/n11654973.md#1" target="_blank">在北京确诊两名鼠疫患者 一人病情危重</a><br></h3>近日，两名内蒙古患者在北京被确诊为鼠疫的消息引发广泛关注。《新京报》14日最新报导称，目前一名患者病情危重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:42 PM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/27/n11616220.md#1" target="_blank">甘肃深夜发生5.7级地震 民众逃到街上</a><br></h3>28日凌晨2时许，甘肃省甘南藏族自治州夏河县发生5.7级地震。合作市、夏河县震感强烈，并伴有余震，民众纷纷在寒冷的深夜外出避险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 6:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mchnr2468/djy/blob/master/gb/ncid280_4.md#1<br><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid280_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mchnr2468/djy/blob/master/gb/ncid280_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_4.htm">http://www.epochtimes.com/gb/ncid280_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
